--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 }
 body {
   margin: 75px 0 0 0;
-  font-size: 1.5em;
+  font-size: 1.2em;
   text-align: center;
   background-color: #333333;
 }
@@ -53,13 +53,13 @@ header img {
   padding-left: 2%;
 }
 header nav {
-  width: 50%;
+  width: 60%;
   height: 100%;
   display: flex;
   justify-content: space-between;
   padding-right: 2%;
 }
-header nav li {
+header nav div {
   height: 100%;
   width: 20%;
   display: flex;
@@ -118,15 +118,16 @@ main {
 }
 main #about {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  text-align: right;
 }
 main #about #description {
-  width: 70%;
+  width: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+main #about #description h4 {
+  margin: 20px;
 }
 main #about #description p {
   margin-bottom: 20px;
@@ -166,10 +167,10 @@ main #tools #competencesDiv div {
   height: 40px;
   margin: 4px 0;
 }
-main #tools #competencesDiv div p {
+main #tools #competencesDiv div .pValue {
   display: none;
 }
-main #tools #competencesDiv div h4 {
+main #tools #competencesDiv div .pName {
   width: 25%;
   margin: 0;
 }
@@ -256,14 +257,17 @@ footer p {
 
 @media screen and (max-width: 800px) {
   * {
-    font-size: 80%;
+    font-size: 85%;
   }
   header nav {
-    flex-direction: column;
     align-items: flex-end;
+    width: 75%;
   }
-  header nav li {
-    justify-content: end;
+  #about {
+    justify-content: center;
+  }
+  #about #imgMe {
+    display: none;
   }
 }
 @media screen and (min-width: 801px) {
@@ -272,6 +276,9 @@ footer p {
   }
   nav a {
     display: inline-block;
+  }
+  #about {
+    justify-content: space-between;
   }
 }
 
