--- a/styles.scss
+++ b/styles.scss
@@ -25,7 +25,7 @@ $color2: rgb(16, 233, 86);
 
 body {
     margin: 75px 0 0 0;
-    font-size: 1.5em;
+    font-size: 1.2em;
     text-align: center;
     background-color: $color1;
 }
@@ -67,13 +67,13 @@ header {
     }
 
     nav {
-        width: 50%;
+        width: 60%;
         height: 100%;
         display: flex;
         justify-content: space-between;
         padding-right: 2%;
 
-        li {
+        div {
             height: 100%;
             width: 20%;
             @include flexCenter
@@ -145,15 +145,18 @@ main {
 
     #about {
         display: flex;
-        justify-content: space-between;
         align-items: center;
-        text-align: right;
+
 
         #description {
-            width: 70%;
+            width: 60%;
             display: flex;
             flex-direction: column;
             align-items: center;
+
+            h4 {
+                margin: 20px;
+            }
 
             p {
                 margin-bottom: 20px;
@@ -204,11 +207,11 @@ main {
                 height: 40px;
                 margin: 4px 0;
 
-                p {
+                .pValue {
                     display: none;
                 }
 
-                h4 {
+                .pName {
                     width: 25%;
                     margin: 0;
 
@@ -327,18 +330,21 @@ footer {
 
 @media screen and (max-width: 800px) {
     * {
-        font-size: 80%;
+        font-size: 85%;
     }
 
     header {
-
         nav {
-            flex-direction: column;
             align-items: flex-end;
+            width: 75%;
+        }
+    }
 
-            li {
-                justify-content: end;
-            }
+    #about {
+        justify-content: center;
+
+        #imgMe {
+            display: none;
         }
     }
 }
@@ -349,8 +355,10 @@ footer {
 
         a {
             display: inline-block;
-
         }
+    }
 
+    #about {
+        justify-content: space-between;
     }
 }
